# complete-agentic-ai

./: .env.example  .gitignore  README.md  autonomous_executive_assistant_backup.ipynb  pyproject.toml
00_python/: README.md
00_python/basics/: README.md  basics_exercises.py  basics_intro.py  guess_the_number.py
00_python/basics/projects/advanced/: budget_planner.py
00_python/basics/projects/basic/: number_story.py
00_python/basics/projects/medium/: student_progress_tracker.py
00_python/data_types/: README.md  data_types_exercises.py  data_types_intro.py  profile_formatter.py
00_python/data_types/projects/advanced/: expense_report.py
00_python/data_types/projects/basic/: profile_card.py
00_python/data_types/projects/medium/: inventory_summary.py
00_python/functions/: README.md  calculator_project.py  functions_exercises.py  functions_intro.py
00_python/functions/projects/advanced/: recipe_planner.py
00_python/functions/projects/basic/: unit_converter.py
00_python/functions/projects/medium/: text_toolkit.py
00_python/loops/: README.md  loops_exercises.py  loops_intro.py
00_python/loops/projects/advanced/: study_tracker.py
00_python/loops/projects/basic/: countdown_timer.py
00_python/loops/projects/medium/: daily_menu_counter.py
00_python/oops/: README.md  library_project.py  oops_exercises.py  oops_intro.py
00_python/oops/projects/advanced/: school_management_system.py
00_python/oops/projects/basic/: pet_demo.py
00_python/oops/projects/medium/: bank_account_system.py
1_Langchain/: 01_agents.ipynb  01_langchainintro.ipynb  05_structured_ouput.ipynb  06_middleware.ipynb  07_subagents.ipynb  weatheragent_project.ipynb  websearch_agent.ipynb
1_Langchain/basics/: 01_agents.ipynb  01_langchainintro.ipynb  02_models.ipynb  03_tools.ipynb
1_Langchain/basics/projects/: simple_website_builder.ipynb
1_Langchain/projects/advance_projects/: autonomous_executive_assistant.ipynb  browser_automation_agent.ipynb  multiagent_project.ipynb  nlp_to_sql_agent.ipynb
2_RAG/: intro.md
2_RAG/code_examples_and_summary/notebook/: document.ipynb  pdf_loader.ipynb
2_RAG/components/01_documents/: 01_script.ipynb  doc.txt
2_RAG/components/02_chunking/: 02_script.ipynb  output.txt
2_RAG/components/03_embeddings/: 03_script.ipynb
2_RAG/components/04_vector_databases/: 04_script.ipynb
2_RAG/data/vector_store/: chroma.sqlite3
2_RAG/first_rag_chatbot/: ingest.ipynb
2_RAG/notebook/: deep_dive_rag.ipynb  document.ipynb
2_RAG/projects/first_rag_chatbot/: ingest.ipynb
2_RAG/projects/python_rag_assistant/: demo-conversation.md  main.py
2_RAG/projects/youtube_rag_assistant/: ingest.py  requirment.txt  retriever.py  utils.py
2_RAG/projects/youtube_rag_assistant/data/bm25/: KRYZiytvLM4.pkl  NjIBc87VvtA.pkl
