[project]
name = "agentic-ai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.8",
    "ipykernel>=7.3.0",
    "langchain>=1.3.8",
    "langchain-classic>=1.0.8",
    "langchain-community[youtube]>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "pytube>=15.0.0",
    "tavily-python>=0.7.26",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.6.9",
]
