[project]
name = "agentic-ai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "deepagents>=0.6.8",
    "fastapi>=0.138.0",
    "google-api-python-client>=2.197.0",
    "google-auth-oauthlib>=1.4.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.8",
    "langchain-classic>=1.0.8",
    "langchain-community[youtube]>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "langgraph>=1.2.4",
    "lxml>=6.1.1",
    "pinecone>=7.3.0",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pymysql>=1.2.0",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "pytube>=15.0.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "torchvision>=0.27.1",
    "unstructured>=0.23.1",
    "uvicorn>=0.49.0",
    "websockets>=15.0.1",
    "youtube-transcript-api>1.0",
    "yt-dlp>=2026.6.9",
]
